# reyes_baldeon_axel_pc2

./: CMakeLists.txt  README.md
benchmark/: README.md  benchmark.cpp
demos/: README.md  demo_pila_visual.cpp
docs/: Actividad1.md  Actividad2.md  Actividad3.md
include/: Solution301.h
resultados/: evidencia_ejecucion.md  salida_consola.txt
src/: main.cpp
tests/: test_solution.cpp
video/: enlace.txt
